<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Trilium Notes</string>
    <string name="server_placeholder" translatable="false">https://example.trilium.cc</string>
    <string name="user_placeholder">Username</string>
    <string name="password_placeholder">Trilium password</string>
    <string name="basic_auth_user_placeholder">User ID</string>
    <string name="basic_auth_placeholder">Password</string>
    <string name="fab_description">Primary action</string>
    <string name="fab_tree_description">Secondary action</string>
    <string name="jump_to_dialog">Jump to note</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="settings_sync_server_header">Sync server</string>
    <string name="password_label">Password</string>
    <string name="basic_auth_label">HTTP Basic authentication (optional)</string>
    <string name="server_label">Server instance address (host + port)</string>
    <string name="action_share">Share</string>
    <string name="action_add">Create new note</string>
    <string name="button_new_note">Create new child note</string>
    <string name="button_new_note_sibling">Create new sibling note</string>
    <string name="action_console_log">Console Log</string>
    <string name="action_delete">Delete</string>
    <string name="channel_name">Custom Notifications</string>
    <string name="action_execute">Execute</string>
    <string name="attribute">Attribute</string>
    <string name="label_new_note_as_child">Create as child of current note</string>
    <string name="label_new_note_next">Create next to current note</string>
    <string name="dialog_create_new_note">Create new note</string>
    <string name="label_create">Create</string>
    <string name="label_title">Name</string>
    <string name="toast_cannot_delete_root">Can\'t delete root note</string>
    <string name="toast_could_not_delete">Could not delete note</string>
    <string name="dialog_rename_note">Rename note</string>
    <string name="label_rename">Rename</string>
    <string name="label_note_paths">Note Paths</string>
    <string name="button_clone_note">Clone note</string>
    <string name="label_owned_attributes">Labels</string>
    <string name="description_add_label">add label</string>
    <string name="dialog_modify_labels">Modify labels</string>
    <string name="label_inherited_attributes">Inherited Labels</string>
    <string name="button_add_label">Add</string>
    <string name="dialog_add_label">Add label</string>
    <string name="description_delete_label">delete label</string>
    <string name="dialog_modify_relations">Modify relations</string>
    <string name="description_delete_relation">delete relation</string>
    <string name="dialog_add_relation">Add relation</string>
    <string name="dialog_select_note">Select note</string>
    <string name="label_owned_relations">Relations</string>
    <string name="description_modify_relations">modify relations</string>
    <string name="description_open_target_note">open target note</string>
    <string name="label_inherited_relations">Inherited relations</string>
    <string name="description_clone_note">clone note</string>
    <string name="action_note_map">Note Map</string>
    <string name="label_fab_action">Action</string>
    <string name="label_fab_left">L</string>
    <string name="label_fab_right">R</string>
    <string name="label_fab_toolbar">M</string>
    <string name="label_interface">Interface</string>
    <string name="label_floating_action_buttons">Floating action buttons</string>
    <string name="description_modify_fabs">modify floating action buttons</string>
    <string name="dialog_configure_fabs">Configure floating actions</string>
    <string name="description_app_icon">app icon</string>
    <string name="label_welcome_to_trilium_notes">Welcome to Trilium Notes!</string>
    <string name="text_first_time_user">If this is your first time using Trilium Notes, you must first use the desktop app and set up a sync server. (This requirement will be lifted in a future update.)</string>
    <string name="button_create_new_note_collection">Create new note collection</string>
    <string name="text_existing_user">If you are already using the PC version, you may synchronize your existing data.</string>
    <string name="text_existing_database">Synchronizing your data with the above option is the preferred way of getting started. But if your database contains very large notes or attachments (>10 megabytes), you must copy and import the database manually, due to technical constraints.</string>
    <string name="button_synchronize_existing_data">Synchronize existing data</string>
    <string name="button_import_database">Import database manually</string>
    <string name="label_miscellaneous">Miscellaneous</string>
    <string name="button_delete_database">Delete database</string>
    <string name="description_add_note_link">add note link</string>
    <string name="toast_no_note">no note loaded</string>
    <string name="description_move_note">move note</string>
    <string name="dialog_select_parent_note">Select parent note</string>
    <string name="dialog_report_app_crash">App crash</string>
    <string name="label_report_crash">Report crash at %1$s to the developer?</string>
    <string name="dialog_select_sibling_note">Insert after which note?</string>
    <string name="button_insert_as_last_note">Insert as last note</string>
    <string name="button_export_database">Export database</string>
    <string name="text_about_1">Trilium Notes is a hierarchical note taking application with focus on building large personal knowledge bases.</string>
    <string name="text_about_2">PC version</string>
    <string name="text_about_3">The original version of this app has been developed by zadam since 2017. It runs on Windows, Mac and Linux. Starting in 2024, development has continued as part of the TriliumNext organization.</string>
    <string name="text_about_4" translatable="false">" TriliumNext / Trilium"</string>
    <string name="text_about_6">Android port</string>
    <string name="text_about_7">The Android port has been developed by FliegendeWurst since 2023. If you encouter any issues using the app, feel free to open an issue in the repository linked below.</string>
    <string name="text_about_8" translatable="false">" FliegendeWurst / TriliumDroid"</string>
    <string name="description_run_script">run script</string>
    <string name="label_background_colors">Background colors</string>
    <string name="description_modify_primary_color">modify primary color</string>
    <string name="description_modify_secondary_color">modify secondary color</string>
    <string name="label_primary_color">Primary</string>
    <string name="label_secondary_color">Secondary</string>
    <string name="label_mtls_authentication">mTLS authentication (optional, experimental)</string>
    <string name="button_add_certificate_and_key">Select key</string>
    <string name="button_clear_mtls_auth">Clear</string>
    <string name="label_widget_basic_properties">Basic Properties</string>
    <string name="label_note_type">Note Type</string>
    <string name="label_protect_the_note">Protect the note</string>
    <string name="label_status">Status</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_db_mismatch">Database mismatch</string>
    <string name="status_login_fail">Login failed (check password)</string>
    <string name="status_connection_fail">Connection failed (check network)</string>
    <string name="status_sync_success">Last sync: %1$s minutes ago</string>
    <string name="action_show_note_tree">Show note tree</string>
    <string name="action_note_navigation">Navigate note tree</string>
    <string name="fab_setup_hint">L = Left action, R = right action, M = toolbar action</string>
    <string name="error_generic">An error occurred whilst trying to synchronize the database.</string>
    <string name="error_connect">The app could not connect to the sync server.</string>
    <string name="error_unknown_host">The hostname of the sync server could not be resolved.</string>
    <string name="error_mismatched_database">The local database does not match the sync server\'s database. You must delete the previous database in the settings, if you really want to switch to the new database.</string>
    <string name="error_incorrect_password">The password is incorrect.</string>
    <string name="label_sync_error">Sync error</string>
    <string name="label_limit_sync_to_network">Limit synchronization to network (optional)</string>
    <string name="button_current_network">Current network</string>
    <string name="button_clear_sync_network">Clear</string>
    <string name="button_enter_protected_session">Enter protected session</string>
    <string name="label_protected_note">You must enter a protected session to view encrypted notes.</string>
    <string name="title_protected_note">Protected note</string>
    <string name="action_leave_protected_session">Leave protected session</string>
    <string name="action_enter_protected_session">Enter protected session</string>
    <string name="button_configure_synchronization">Configure synchronization</string>
    <string name="label_set_ui_language">Set UI language</string>
    <string name="label_set_ui_theme">Set UI theme (day/night)</string>
    <string name="label_set_text_size">Set text size</string>
    <string name="theme_day">Day / Light</string>
    <string name="theme_night">Night / Dark</string>
    <string name="theme_auto">Automatic / System</string>
    <string name="label_revisions">Revisions</string>
    <string name="label_metadata">Metadata</string>
    <string name="label_note_id">Note ID</string>
    <string name="label_created">Created</string>
    <string name="label_modified">Modified</string>
    <string name="description_delete_revision">delete revision</string>
    <string name="description_revert_to_this_revision">revert to this revision</string>
    <string name="description_view_revision">view revision</string>
    <string name="title_delete_database">Delete database</string>
    <string name="text_nuke_database">Do you really want to delete all notes and related data?</string>
    <string name="title_delete_revision">Delete revision</string>
    <string name="text_delete_revision">Do you really want to delete this revision?</string>
    <string name="label_revision_interval">Revision interval (seconds between note snapshots)</string>
    <string name="title_configure_widget">Configure widget</string>
    <string name="settings_action_label">Action to perform</string>
    <string name="widget_action_note_selection">(none selected)</string>
    <string name="widget_action_note_heading">Note to use</string>
    <string name="widget_action_edit">Edit note</string>
    <string name="widget_description">TriliumDroid widget</string>
    <string name="open_note">Open note</string>
    <string name="title_trust_sync_server_certificate">Trust sync server certificate?</string>
    <string name="toast_sync_unavailable">Sync not configured!</string>
    <string name="snackbar_sync_start">Sync: starting…</string>
    <string name="snackbar_sync_progress" tools:ignore="PluralsCandidate">Sync: %1$d outstanding…</string>
    <string name="snackbar_sync_error">Sync: error!</string>
    <string name="snackbar_sync_done" tools:ignore="PluralsCandidate">Sync: %1$d pulled, %2$d pushed</string>
    <string name="sidebar_tab_1">Notes</string>
    <string name="sidebar_tab_2">Special</string>
    <string name="title_dialog_delete_note">Delete note</string>
    <string name="text_really_delete">Do you really want to delete this note?</string>
</resources>