<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/bx_plus_circle"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    -->

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/bx_edit_alt"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/bx_share_alt"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_execute"
        android:icon="@drawable/bx_play"
        android:title="@string/action_execute"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_console"
        android:title="@string/action_console_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync"
        android:title="@string/action_sync"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/bx_cog"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>