<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:layout_weight="1"
            android:text="@string/label_fab_action"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/label_fab_left"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:paddingStart="8dp"
            android:text="@string/label_fab_right"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:paddingStart="5dp"
            android:paddingEnd="3dp"
            android:text="@string/label_fab_toolbar"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_fab_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/fab_setup_hint" />

    <Button
        android:id="@+id/button_setup_fabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/activity_margin"
        android:text="@android:string/ok" />

</LinearLayout>
