<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_server"
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/server_label"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/server"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/server_placeholder"
            android:importantForAutofill="no"
            android:inputType="textUri"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/server_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_password"
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password_label"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_mtls"
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_mtls"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mtls_authentication"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_configure_mtls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="0dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/button_add_certificate_and_key"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_mtls"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/button_configure_mtls_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="0dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/button_clear_mtls_auth"
            app:layout_constraintStart_toEndOf="@id/button_configure_mtls"
            app:layout_constraintTop_toBottomOf="@id/label_mtls"
            tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_ssid_limit"
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_ssid_limit"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_limit_sync_to_network"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_configure_ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="0dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/button_current_network"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_ssid_limit" />

        <Button
            android:id="@+id/button_configure_ssid_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="0dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/button_clear_sync_network"
            app:layout_constraintStart_toEndOf="@id/button_configure_ssid"
            app:layout_constraintTop_toBottomOf="@id/label_ssid_limit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/divider" />

</LinearLayout>
