<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/extra_big_text_icon_size"
            android:layout_height="@dimen/extra_big_text_icon_size"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/normal_margin"
            android:contentDescription="@string/description_app_icon"
            android:scaleType="center"
            android:src="@drawable/icon_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/xxxl_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:paddingStart="@dimen/big_margin"
        android:paddingEnd="@dimen/big_margin"
        android:text="@string/text_about_1"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/divider_grey"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <TextView
        android:id="@+id/header_pc"
        style="@style/SettingsSectionLabelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_about_2"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/description_pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:paddingStart="@dimen/big_margin"
        android:paddingEnd="@dimen/big_margin"
        android:text="@string/text_about_3"
        android:textSize="@dimen/bigger_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_github"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_pc" />

    <Button
        android:id="@+id/button_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:drawableStart="@drawable/bxl_github"
        android:text="@string/text_about_4"
        android:textSize="@dimen/bigger_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_github3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_pc" />

    <Button
        android:id="@+id/button_github3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/activity_margin"
        android:drawableStart="@drawable/bxl_github"
        android:text="@string/text_about_5"
        android:textSize="@dimen/bigger_text_size"
        app:layout_constraintBottom_toBottomOf="@id/description_pc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_github" />

    <ImageView
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/divider_grey"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@id/button_github3" />

    <TextView
        android:id="@+id/header_app"
        style="@style/SettingsSectionLabelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_about_6"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <TextView
        android:id="@+id/description_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:paddingStart="@dimen/big_margin"
        android:paddingEnd="@dimen/big_margin"
        android:text="@string/text_about_7"
        android:textSize="@dimen/bigger_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_app" />

    <Button
        android:id="@+id/button_github2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:drawableStart="@drawable/bxl_github"
        android:text="@string/text_about_8"
        android:textSize="@dimen/bigger_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_app" />

    <ImageView
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/divider_grey"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@id/button_github2" />

</androidx.constraintlayout.widget.ConstraintLayout>