<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetupActivity">

    <EditText
        android:id="@+id/server"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:hint="@string/server_placeholder"
        android:text="http://192.168.178.21:12783"
        android:importantForAutofill="no"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:autofillHints="username"
        android:hint="@string/user_placeholder"
        android:text="arne"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:autofillHints="password"
        android:hint="@string/password_placeholder"
        android:text="UNGHXdk0Ln22nDeIy98k4pDES9FBbrry8POEMMrkx4ovZLNyFGEDxCCE0yOHwP52riSTwCP5vhU7DbOkpdUOpelQJlJVwvA1u0k63pybca1yWBQFAFqEJ1NVT8iGDrIIdRmuVsod5v7gFQGRZCnxrtle3FHDUywufUNSROxrZfeT3gzqszsmn1yHFAJh6xqqSSKT6Ako9SqeDXmRIs8rfV8NmYom5Rur3TY4IlHxE2dKmldU9V7ii8vR9mNLHX4H"
        android:inputType="textPassword"
        android:maxLength="1000" />

    <Button
        android:id="@+id/setup_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/setup_button" />
    <!--android:onClick="@{()->SetupActivity.setup()}"-->

</LinearLayout>