<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_action"
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settings_action_label"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_action_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/settings_action_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_action_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settings_action_note"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_action_note_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_action_note_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_action_note_selection"
            app:layout_constraintBaseline_toBaselineOf="@id/button_select_note"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_select_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:padding="0dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/dialog_select_note"

            app:layout_constraintStart_toEndOf="@id/settings_action_note_selected"
            app:layout_constraintTop_toBottomOf="@id/settings_action_note"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/divider" />

</LinearLayout>
